--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Skapandi forritun</h1>
 
     <p>Þetta er heimasíðan mín í skapandi forritun</p>
-    <p>Ég heiti Gizur Gottskálksson. </p>
+    <p>Ég heiti Gizur Gottskálksson.  Hæ</p>
     <p>Þessi síða er að verða tilbúin.</p>
     <p>Hér er myndinn mín. </p>
 <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
